fix width menu on mobile

--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -16,8 +16,6 @@
  *overflow:hidden запрещает скролл для удобства пролистывания таблиц и прочего (где нужно можно выставить возможность скрола на самой странице)
  */
 body
-	margin-left: 1px
-	margin-right: 1px
 	margin-top: 0px
 	margin-bottom: 1px
 	width: 100%
@@ -100,10 +98,9 @@ div
 						color: black
 
 /* Навигация */
-
 div
 	&.main_nav
-		width: 101%
+		width: 100%
 		height: 100%
 		position: fixed
 		overflow: auto
@@ -111,7 +108,6 @@ div
 		left: 0
 		display: flex
 		padding: 0
-		margin-left: -1px
 		/*мобильная версия
 		 *important везде стоят чтобы переплюнуть не мобильные стили возможно с этим стоит что то сделать))
 		 */
@@ -484,17 +480,19 @@ div
 					div
 						&.head_menu
 							display: flex !important
-							width: 101%;
-							margin-left: -1px;
+							width: 100%
 
 							a
 								&#menu_btn
 									width: 100%
 									text-align: left
 									border-bottom: 0 !important
+									border-right: 0 !important
 							div
 								&.black_block
 									top: 0
+									right: 0
+									left: 0
 									position: fixed
 									width: 100vw
 									height: 0
@@ -504,8 +502,7 @@ div
 									display: block !important
 							
 							div
-								width: 101%
-								margin-left: -1px
+								width: 100%
 								border-right: 0 !important
 								&.dropdown:hover
 									border: 0
@@ -524,6 +521,7 @@ div
 											background-color: white !important
 											border-color: var(--MenuColor) !important
 											border-left: 0 !important
+											border-right: 0 !important
 
 			div
 				&.head_menu
@@ -567,7 +565,7 @@ div
 								border: 0
 								border-radius: 0
 								background-clip: unset
-								margin: -0.5px -0px 0px -1px;
+								margin: -0.5px -0px 0px 0px;
 								a
 									&.menu_btn
 										background-color: var(--MenuColor)
